fix: fix NewProducer
