# api-service/docs/swagger.json
@@ -259,12 +259,12 @@
                         "required": true
                     },
                     {
-                        "description": "task info",
+                        "description": "code to run",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.TaskRequest"
+                            "$ref": "#/definitions/model.Task"
                         }
                     }
                 ],
@@ -352,18 +352,18 @@
                 }
             }
         },
-        "api.TaskRequest": {
-            "type": "object",
-            "properties": {
-                "text": {
-                    "type": "string"
-                }
-            }
-        },
         "api.TaskResponse": {
             "type": "object",
             "properties": {
                 "task_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Task": {
+            "type": "object",
+            "properties": {
+                "code": {
                     "type": "string"
                 }
             }
